# StocksGPT

./: README.md
React-Buddy/: README.md
React-Buddy/GenAI/: Code.py  GetRoot_Components.py  events.py  extractActions.py  extractChildCompo.py  extractCompo_Recursion.py  gemini_apiCall.ipynb  getComponents.py  (+1 more)
StockBuddyGenAI/: README.md  app.py  experimental.ipynb  pyproject.toml  run_tests.py
StockBuddyGenAI/Design/: Backend Design.xlsx  Embedding based Decision Tree.xlsx  Testing  design for Stock Price Action.xlsx
StockBuddyGenAI/src/Data/: Filtered_stock_data.csv
StockBuddyGenAI/src/Data/data_utils/: NSE_Data_Appender.py  NSE_table_updater.py  prompt_cache_manager.py  tempCodeRunnerFile.py
api/: apiCore.ts  apiNodeCore.ts  auth.ts  authNode.ts  bookmarks.ts  calls.ts  chats.ts  contacts.ts  index.ts  nodeUrls.ts  profile.ts  stockChats.ts  stockChatsNode.ts  urls.ts
components/: AddButton.tsx  AddPinnedTabModal.tsx  AppSimpleBar.tsx  AttachedFiles.tsx  AudioCallModal.tsx  AuthHeader.tsx  ContactModal.tsx  EmptyStateResult.tsx  FormInput.tsx  ForwardModal.tsx  InviteContactModal.tsx  LeftbarTitle.tsx  LightBox.tsx  LightDarkMode.tsx  Loader.tsx  Media.tsx  NonAutnLayoutWrapper.tsx  StockPriceChart.tsx  UpdateDeleteBookmark.tsx  VerticalForm.tsx  VideoCallModal.tsx
data/: bookmarks.ts  calls.ts  channels.ts  chat.ts  contacts.ts  graphJSON.ts  index.tsx  messages.ts  myProfile.ts  settings.ts  stockChatMessages.ts  stockChats.ts
helpers/: fakeBackend.ts  notifications.ts
hooks/: UserHooks.ts  WindowHooks.ts  index.ts  useRedux.ts
public/: index.html
(+11 files in other folders)
