[tool.poetry]
name = "stockbuddygenai"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
bhavcopy = "^3.0"
python-dotenv = "^1.0.1"
google-generativeai = "^0.5.2"
plotly = "^5.21.0"
fuzzywuzzy = "^0.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
